# paper2026

./: .gitignore  README.md  chandisvrp  pyproject.toml  requirements.txt  run_chandisvrp.py
.github/workflows/: ci.yml
cache/: tmp_map.html
cache/tmp_instances/: chandigarh_20_0.json  chandigarh_30_0.json
configs/: benchmark_small.yaml  default.yaml
scripts/: build_instances.py  download_osm.py  make_report.py  run_benchmark.py  smoke_test.py
src/chandisvrp/: __init__.py  cli.py  config.py  types.py
src/chandisvrp/evaluation/: io.py  metrics.py  runner.py
src/chandisvrp/geo/: nearest.py  osm_graph.py  zones.py
src/chandisvrp/instances/: demand.py  generator.py  serialization.py  time_windows.py
src/chandisvrp/reporting/: interactive_map.py  pdf_report.py  plots.py
src/chandisvrp/solvers/: abc_solver.py  aco_solver.py  alns_solver.py  base.py  constructive.py  hybrid_aco_abc.py  operators_destroy.py  operators_repair.py  ortools_solver.py  split.py
src/chandisvrp/stochastic/: accidents.py  delay_model.py  simulator.py  traffic_model.py  travel_time.py
tests/: test_instance_io.py  test_interactive_map.py  test_simulator.py  test_split.py
