[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chandisvrp"
version = "0.1.0"
description = "Stochastic VRP benchmark scaffold for Chandigarh"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
